# twitter-collector

./: .gitignore  AGENTS.md  BOOTSTRAP.md  README.md  service.config.yaml  service.manifest.yaml
.github/workflows/: build.yml
app/: cli.py  pyproject.toml
app/config/: collections.yaml
app/src/: __init__.py  cli.py  collector.py  config.py  pipeline.py
app/tests/: __init__.py  test_cli.py  test_config.py  test_pipeline.py
container/: Containerfile  entrypoint.sh
docs/: architecture.md  contracts.md  deploy.md  deployment.md
nixos/modules/: service-name.nix
