[project]
name = "service-name"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asset-maximizer-common",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
asset-maximizer-common = { path = "../common" }

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
