[project]
name = "twitter-collector"
version = "0.1.0"
description = "Twitter/X collection pipeline backed by twitter-cli"
requires-python = ">=3.12"
dependencies = [
    "asset-maximizer-common",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml",
    "twitter-cli @ git+https://github.com/jackwener/twitter-cli.git@e496d8f8708d71800188cfb23f24b2b6fd4b94b9",
]

[tool.uv.sources]
asset-maximizer-common = { workspace = true }
twitter-cli = { git = "https://github.com/jackwener/twitter-cli.git", rev = "e496d8f8708d71800188cfb23f24b2b6fd4b94b9" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
